[package]
name = "medi-stream-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hmac = "0.12"
jsonwebtoken = "9"
md5 = "0.7"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = "0.5"
